# mdi-pipelines-framework

./: .gitignore  README  README.md  _config.yml  server.yml
crates/: vsCode_rust_remote_setup.md
crates/mdi/: Cargo.toml  make_tsv.pl  vsCode_rust_remote_setup.txt
crates/mdi/examples/: data_frame_advanced.rs  data_frame_basics.rs  group_by_in_place_parallel.rs  group_by_in_place_serial.rs  group_by_replace_parallel.rs  group_by_replace_serial.rs  stream_in_place_parallel.rs  stream_in_place_serial.rs  stream_replace_parallel.rs  stream_replace_serial.rs  tools_dispatch_main.rs  workflow_streamer_template.rs  workflow_worker_template.rs
crates/mdi/src/: lib.rs  record_streamer.rs  stream.rs
crates/mdi/src/record/: fanner.rs  mod.rs  streamer.rs
crates/mdi/src/rlike/: README.md  mod.rs  rlike_data_model.md
crates/mdi/src/rlike/data_frame/: README.md  column.rs  index.rs  io.rs  join.rs  mod.rs  prelude.rs  query.rs  slice.rs  trait.rs
crates/mdi/src/rlike/data_frame/bind/: cbind.rs  rbind.rs
crates/mdi/src/rlike/data_frame/column/: query.rs
crates/mdi/src/rlike/data_frame/join/: sorted.rs  unsorted.rs
crates/mdi/src/rlike/data_frame/macros/: get.rs  index.rs  inject.rs  new.rs  set.rs
crates/mdi/src/rlike/data_frame/query/: aggregate.rs  do.rs  pivot.rs  select.rs
crates/mdi/src/workflow/: config.rs  counters.rs  file.rs  log.rs
crates/mdi_streamer/: Cargo.toml  (+1 more)
docs/: compiled-code.md  env_vars.md  overview.md  parallelization.md  script_utilities.md
job_manager/: README  initialize.pl
pipeline/: README
utilities/: delete_directory.pl
(+81 files in other folders)
