[package]
name = "mdi"
version = "0.1.0"
rust-version = "1.92"
edition = "2024"
authors = ["Thomas E. Wilson"]

[dependencies]
csv = "1.4"
rayon = "1.11"
crossbeam = "0.8.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
flate2 = "1.1"
rust-htslib = "0.51"
paste = "1.0"
num-format = "0.4"
chrono = "0.4"
